--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,14 +28,14 @@
         android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
         <receiver
-            android:name=".main.MyReceiver"
+            android:name=".MyReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.bluetooth.device.action.FOUND" />
             </intent-filter>
         </receiver>
-        <service android:name=".main.BluetoothConnectionService"
+        <service android:name=".BluetoothConnectionService"
             android:enabled="true"
             android:exported="true"/>
 
@@ -48,8 +48,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.SettingsFragment" />
-        <activity android:name=".main.Connect" />
+        <activity android:name=".SettingsFragment" />
+        <activity android:name=".Connect" />
 
 
     </application>
